# StockAgent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_EXPLANATION.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  railway.json  requirements.txt  sanitize_data.py  server.py  sync_data.py
docs/: index.md  introduction.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/data/: investment_report.md  investment_thesis.json  thesis_json.json
frontend/src/: App.jsx  index.css
src/stocksage/: __init__.py  agents.py  config.py  crew.py  main.py  tasks.py  user_interface.py
src/stocksage/tools/: __init__.py  alpha_vantage_tool.py  default_tools.py  sentiment_analysis_tool.py  stock_symbol_fetcher_tool.py  yahoo_finance_tool.py
src/stocksage/utils/: __init__.py  api_fetch.py  logger.py  telemetry_tracking.py
tests/: conftest.py
tests/tools/: test_alpha_vantage_tool.py  test_sentiment_analysis_tool.py  test_stock_symbol_fetcher_tool.py  test_yahoo_finance_tool.py
tests/utils/: test_api_fetch.py  test_telemetry_tracking.py
